# skills-list

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-windows.yml
crates/skills-cli/: Cargo.toml
crates/skills-cli/src/: main.rs
crates/skills-cli/tests/: cli.rs
crates/skills-core/: Cargo.toml
crates/skills-core/src/: lib.rs
scripts/: build-cli-sidecar.ps1
src/: main.ts  styles.css
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
