[package]
name = "skills-list-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "skills_list_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
skills-core = { path = "../crates/skills-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

