[package]
name = "skills-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "skills-list"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
skills-core = { path = "../skills-core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
